--- a/app/src/main/res/layout/fragment_running_timers_list.xml
+++ b/app/src/main/res/layout/fragment_running_timers_list.xml
@@ -10,19 +10,20 @@
         android:layout_marginHorizontal="10dp"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/content"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/text_margin"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
-
         <Button
             android:id="@+id/button"
             style="@style/Widget.AppCompat.Button.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Start" />
+            android:text="Start"
+            android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/content"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
+
     </LinearLayout>
 
     <View
