--- a/app/src/main/res/layout/fragment_running_timers_list.xml
+++ b/app/src/main/res/layout/fragment_running_timers_list.xml
@@ -11,11 +11,11 @@
         android:orientation="vertical">
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/show"
             style="@style/Widget.AppCompat.Button.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Start"
+            android:text="Show"
             android:textSize="12sp" />
 
         <TextView
@@ -28,7 +28,7 @@
 
     <View
         android:id="@+id/divider6"
-        android:layout_width="1dp"
+        android:layout_width="10dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:background="?android:attr/listDivider" />
