--- a/app/src/main/res/layout/workbench_tab_fragment.xml
+++ b/app/src/main/res/layout/workbench_tab_fragment.xml
@@ -5,9 +5,21 @@
     android:layout_height="match_parent"
     tools:context=".fragments.WorkbenchTab">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Should contain a list of all task items to do, in a hierarchical list, preferably sorted in what is the best way to do them" />
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Should contain a list of all task items to do, in a hierarchical list, preferably sorted in what is the best way to do them" />
+
+        <TextView
+            android:id="@+id/debugText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView" />
+    </LinearLayout>
 
 </FrameLayout>
