--- a/app/src/main/res/layout/fragment_running_timers_list.xml
+++ b/app/src/main/res/layout/fragment_running_timers_list.xml
@@ -10,19 +10,18 @@
         android:layout_marginHorizontal="10dp"
         android:orientation="vertical">
 
-        <Button
-            android:id="@+id/show"
-            style="@style/Widget.AppCompat.Button.Small"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Show"
-            android:textSize="12sp" />
-
         <TextView
             android:id="@+id/content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            android:textColor="#000000" />
+
+        <TextView
+            android:id="@+id/time"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="5m 23s remaining" />
 
     </LinearLayout>
 
