--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -78,10 +78,38 @@
             android:layout_height="1dp"
             android:background="?android:attr/listDivider" />
 
-        <View
-            android:id="@+id/view"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="5dp"
+            android:orientation="horizontal">
+
+            <View
+                android:id="@+id/progressBarGreen"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="#4CAF50" />
+
+            <View
+                android:id="@+id/progressBraYellow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="#FFC107" />
+
+            <View
+                android:id="@+id/progressBarRed"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="#E91E63" />
+
+            <View
+                android:id="@+id/progressBarWhite"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+        </LinearLayout>
 
         <View
             android:id="@+id/divider7"
