Creating dummy data for task setup view

--- a/app/src/main/res/layout/task_setup_tab_fragment.xml
+++ b/app/src/main/res/layout/task_setup_tab_fragment.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.TaskSetupTab">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/taskList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="This will be the task setup tab!" />
+        android:layout_weight="1"
+        tools:listitem="@layout/task_setup_tab_item_fragment" />
 
-</FrameLayout>
+    <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="This will show edit pane for the selected task" />
+
+</LinearLayout>
