--- a/app/src/main/res/layout/task_setup_tab_item_fragment.xml
+++ b/app/src/main/res/layout/task_setup_tab_item_fragment.xml
@@ -8,5 +8,5 @@
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Jeg er tekst" />
+        android:text="TextView" />
 </LinearLayout>
