--- a/app/src/main/res/layout/workbench_tab_fragment.xml
+++ b/app/src/main/res/layout/workbench_tab_fragment.xml
@@ -11,6 +11,7 @@
         android:orientation="horizontal">
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/taskList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1" />
