--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -50,7 +50,7 @@
                 android:id="@+id/tasksTab"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Tasks" />
+                android:text="Recipes" />
 
             <com.google.android.material.tabs.TabItem
                 android:id="@+id/storageTab"
