--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -123,22 +123,25 @@
             <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/runningTimers"
                 android:name="net.merayen.kitchentimer.fragments.RunningTimersListFragment"
+                android:layout_alignParentLeft="true"
+                android:layout_toLeftOf="@id/divider8"
                 android:layout_width="wrap_content"
                 android:background="#F0AA10"
                 android:layout_height="match_parent" />
 
             <View
                 android:id="@+id/divider8"
-                android:layout_width="5dp"
+                android:layout_width="1dp"
                 android:layout_height="match_parent"
-                android:background="#F00A10" />
+                android:layout_toLeftOf="@id/quick_timers_button"
+                android:background="?android:attr/listDivider" />
 
             <TextView
                 android:id="@+id/quick_timers_button"
-                android:layout_width="50dp"
+                android:layout_width="60dp"
                 android:layout_height="wrap_content"
-                android:background="#F0AAF0"
                 android:textAlignment="center"
+                android:layout_alignParentRight="true"
                 android:text="Quick Timers" />
 
         </RelativeLayout>
