--- a/app/src/main/res/layout/fragment_item_list_list_item.xml
+++ b/app/src/main/res/layout/fragment_item_list_list_item.xml
@@ -7,6 +7,6 @@
     <TextView
         android:id="@+id/itemName"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></TextView>
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
