--- a/app/src/main/res/layout/item_setup_tab_fragment.xml
+++ b/app/src/main/res/layout/item_setup_tab_fragment.xml
@@ -81,18 +81,13 @@
             android:layout_height="match_parent"
             android:background="?android:attr/listDivider" />
 
-        <ScrollView
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/itemList"
+            android:name="net.merayen.kitchentimer.fragments.ItemListFragment"
             android:layout_width="200dp"
-            android:layout_height="match_parent">
-
-            <androidx.fragment.app.FragmentContainerView
-                android:id="@+id/itemList"
-                android:name="net.merayen.kitchentimer.fragments.ItemListFragment"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical" />
-
-        </ScrollView>
+            android:layout_height="match_parent"
+            android:orientation="vertical" />
 
         <View
             android:id="@+id/divider3"
