--- a/app/src/main/res/layout/item_setup_tab_fragment.xml
+++ b/app/src/main/res/layout/item_setup_tab_fragment.xml
@@ -1,99 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     tools:context=".fragments.ItemSetupTab">
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/itemList"
+        android:name="net.merayen.kitchentimer.fragments.ItemListFragment"
+        android:layout_width="200dp"
         android:layout_height="match_parent"
-        android:layout_weight="5"
-        android:orientation="horizontal">
+        android:orientation="vertical" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+    <View
+        android:id="@+id/divider2"
+        android:layout_width="1dp"
+        android:layout_height="match_parent"
+        android:background="?android:attr/listDivider" />
 
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/items"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/itemInstanceList"
+        android:layout_width="200dp"
+        android:layout_height="match_parent" />
 
-            <ScrollView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent">
+    <View
+        android:id="@+id/divider3"
+        android:layout_width="1dp"
+        android:layout_height="match_parent"
+        android:background="?android:attr/listDivider" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+    <FrameLayout
+        android:id="@+id/itemEdit"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
-                    <TextView
-                        android:id="@+id/textView3"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Filter type" />
-
-                    <RadioGroup
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-
-                        <RadioButton
-                            android:id="@+id/radioButton3"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="@string/chef" />
-
-                        <RadioButton
-                            android:id="@+id/radioButton"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="@string/equipment" />
-
-                        <RadioButton
-                            android:id="@+id/radioButton2"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="@string/ingredients" />
-
-                    </RadioGroup>
-
-                </LinearLayout>
-            </ScrollView>
-
-        </LinearLayout>
-
-        <View
-            android:id="@+id/divider2"
-            android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:background="?android:attr/listDivider" />
-
-
-        <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/itemList"
-            android:name="net.merayen.kitchentimer.fragments.ItemListFragment"
-            android:layout_width="200dp"
-            android:layout_height="match_parent"
-            android:orientation="vertical" />
-
-        <View
-            android:id="@+id/divider3"
-            android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:background="?android:attr/listDivider" />
-
-
-        <FrameLayout
-            android:id="@+id/itemEdit"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-    </LinearLayout>
-
-</FrameLayout>
+</LinearLayout>
