--- a/app/src/main/res/layout/item_setup_tab_fragment.xml
+++ b/app/src/main/res/layout/item_setup_tab_fragment.xml
@@ -20,6 +20,7 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/itemInstanceList"
+        android:name="net.merayen.kitchentimer.fragments.ItemInstanceListFragment"
         android:layout_width="200dp"
         android:layout_height="match_parent" />
 
