--- a/app/src/main/res/layout/fragment_item_instance_edit.xml
+++ b/app/src/main/res/layout/fragment_item_instance_edit.xml
@@ -3,13 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.ItemEditFragment"
+    tools:context=".fragments.ItemInstanceEditFragment"
     android:focusableInTouchMode="true">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:text="Item instance editor" />
 
     <EditText
         android:id="@+id/itemName"
