--- a/app/src/main/res/layout/fragment_item_instance_edit.xml
+++ b/app/src/main/res/layout/fragment_item_instance_edit.xml
@@ -6,17 +6,46 @@
     tools:context=".fragments.ItemInstanceEditFragment"
     android:focusableInTouchMode="true">
 
-    <TextView
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Item instance editor" />
+        android:layout_height="match_parent">
 
-    <EditText
-        android:id="@+id/itemName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="text"
-        android:importantForAutofill="no" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Name" />
 
+        <EditText
+            android:id="@+id/itemName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="text"
+            android:importantForAutofill="no" />
+
+        <TextView
+            android:textStyle="bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Properties" />
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/itemList"
+            android:name="net.merayen.kitchentimer.fragments.ItemInstancePropertyListFragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+
+        <TextView
+            android:text="Fitness formulas"
+            android:textStyle="bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <androidx.fragment.app.FragmentContainerView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
 </FrameLayout>
