--- a/app/src/main/res/layout/fragment_item_instance_list.xml
+++ b/app/src/main/res/layout/fragment_item_instance_list.xml
@@ -1,6 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".fragments.ItemInstanceListFragment"
+    tools:context=".fragments.tabs.items.ItemInstanceListFragment"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
