--- a/app/src/main/res/layout/fragment_item_instance_property_list.xml
+++ b/app/src/main/res/layout/fragment_item_instance_property_list.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.ItemInstancePropertyListFragment"
+    tools:context=".fragments.tabs.items.ItemInstancePropertyListFragment"
     android:focusableInTouchMode="true">
 
     <LinearLayout
