--- a/app/src/main/res/layout/fragment_item_list.xml
+++ b/app/src/main/res/layout/fragment_item_list.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".fragments.ItemListFragment">
+    tools:context=".fragments.tabs.items.ItemListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/itemList"
