--- a/app/src/main/res/layout/fragment_running_timers_list_list.xml
+++ b/app/src/main/res/layout/fragment_running_timers_list_list.xml
@@ -7,5 +7,5 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layoutManager="LinearLayoutManager"
-    tools:context=".fragments.RunningTimersListFragment"
+    tools:context=".fragments.tabs.workbench.RunningTimersListFragment"
     tools:listitem="@layout/fragment_running_timers_list" />
