--- a/app/src/main/res/layout/storage_tab_fragment.xml
+++ b/app/src/main/res/layout/storage_tab_fragment.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.StorageTab">
+    tools:context=".fragments.tabs.storage.StorageTab">
 
     <LinearLayout
         android:layout_width="match_parent"
