--- a/app/src/main/res/layout/fragment_running_timers_list_list.xml
+++ b/app/src/main/res/layout/fragment_running_timers_list_list.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list"
-    android:name="net.merayen.kitchentimer.fragments.RunningTimersListFragment"
+    android:name="net.merayen.kitchentimer.fragments.tabs.workbench.RunningTimersListFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layoutManager="LinearLayoutManager"
