--- a/app/src/main/res/layout/storage_tab_fragment.xml
+++ b/app/src/main/res/layout/storage_tab_fragment.xml
@@ -10,12 +10,12 @@
         android:layout_height="match_parent"
         android:orientation="horizontal">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="wrap_content"
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/storageList"
+            android:name="net.merayen.kitchentimer.fragments.common.SelectableList"
+            android:layout_width="200dp"
             android:layout_height="match_parent"
-            android:layout_weight="1">
-
-        </androidx.recyclerview.widget.RecyclerView>
+            android:orientation="vertical" />
 
         <View
             android:id="@+id/divider4"
